# SysYCompiler

./: .clang-format  .clang-tidy  .gitattributes  CMakeLists.txt  README.md
doc/: ARM Assembly.md  AST Reference.md  IR Reference.md  LLVM AST Alter.md
include/: error.h  errors.h  util.h  utils.h
include/backend/: asm.h  backend.h  instruction.h  operand.h
include/frontend/: ast.h  ast_manager.h  ast_to_ir.h  frontend.h  parser.h  source_manager.h
include/ir/: ir.h  type.h  value.h
lib/: CMakeLists.txt
lib/libsysy/: CMakeLists.txt  sylib.c  sylib.h
src/: CMakeLists.txt  sysycc.cc  utils.cc
src/backend/: CMakeLists.txt  asm.cc  asm_tool.cc  instruction.cc  operand.cc
src/comm/: CMakeLists.txt  util.cc  utils.cc
src/frontend/: CMakeLists.txt  ast.cc  ast_manager.cc  ast_to_ir.cc  ast_to_ir_tool.cc  parser.cc  parser_tool.cc  source_manager.cc  sysy.l  sysy.y
src/ir/: CMakeLists.txt  ir.cc  type.cc  value.cc
test/: CMakeLists.txt  test_asm.sh  test_ast_to_ir.sh  test_parser.sh  test_parser_verify.sh  test_sysy_verify.sh
test/backend/: CMakeLists.txt  instruction_test.cc  operand_test.cc
test/comm/: CMakeLists.txt  util_test.cc  utils_test.cc
test/frontend/: CMakeLists.txt  parser_verify_tool.cc  sysy_verify.l  sysy_verify.output  sysy_verify.y
test/ir/: CMakeLists.txt  type_test.cc
testcase/: organize_testcase.sh
testcase/example/: Expr.sy  FunctionDecl.sy  InitListExpr.sy  Stmt.sy  VarDecl.sy
testcase/function_test/sy/: 001_var_defn.sy  002_var_defn2.sy  003_var_defn3.sy  004_const_var_defn.sy  005_const_var_defn2.sy  006_const_var_defn3.sy  008_arr_defn2.sy  009_arr_defn3.sy  010_const_arr_defn.sy  011_const_arr_defn2.sy  012_func_defn.sy  013_var_func_defn.sy  015_add2.sy  016_addc.sy  017_sub.sy  018_sub2.sy  019_subc.sy  020_mul.sy  021_mulc.sy  022_div.sy  023_divc.sy  024_mod.sy  025_rem.sy  026_if.sy  028_if3.sy  029_if4.sy  030_if5.sy  031_if6.sy  032_if7.sy  033_while.sy  034_while2.sy  035_while3.sy  036_while_if.sy  037_while_if2.sy  038_while_if3.sy  039_while_if4.sy  040_break.sy  041_continue.sy  042_arr_expr_len.sy  043_op_priority.sy  (+92 more)
testcase/performance_test/sy/: 02_bitset3.sy  04_mm2.sy  06_mv.sy  11_sort3.sy  12_spmv.sy  15_conv.sy  20_fft3.sy  23_median3.sy  25_shuffle2.sy  29_transpose3.sy  31_brainfuck_mandelbrot_nerf.sy  35_crypto3.sy  36_dead_code_elimination.sy  41_floyd3.sy  44_gameoflife_p61glidergun.sy  47_hoist3.sy  50_instruction_combining3.sy  53_integer_divide_optimization3.sy  55_sl2.sy  57_stencil.sy  58_stencil2.sy
